--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,10 +1,23 @@
 ---
 
+- name: "Install virtualenv via pip"
+  pip:
+    name: "virtualenv"
+    executable: pip3
+
 - name: "Create virtualenv and update pip"
-  pip: virtualenv="{{ application_venv }}" name=pip state=latest virtualenv_python="{{ virtualenv_python }}"
+  pip:
+    virtualenv: "{{ application_venv }}"
+    name: pip
+    state: latest
+    virtualenv_python: "{{ virtualenv_python }}"
+  environment:
+    PATH: "{{ ansible_env.PATH }}:{{ ansible_user_dir }}/.local/bin"
 
 - name: "Install requirements"
-  pip: virtualenv="{{ application_venv }}" requirements="{{release_path.stdout}}/requirements.txt"
+  pip:
+    virtualenv: "{{ application_venv }}"
+    requirements: "{{release_path.stdout}}/requirements.txt"
 
 - name: "Run migrations"
   command: "{{ python_binary }} {{ release_path.stdout }}/src/manage.py migrate --noinput"
