--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -3,7 +3,7 @@
 - name: "Install virtualenv via pip"
   pip:
     name: "virtualenv"
-    executable: pip3
+    executable: pip{{ python_version }}
 
 - name: "Create virtualenv and update pip"
   pip:
