--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -4,6 +4,8 @@
   pip:
     name: "virtualenv"
     executable: pip{{ python_version }}
+  environment:
+    PATH: "{{ ansible_env.PATH }}:{{ ansible_user_dir }}/.local/bin"
 
 - name: "Create virtualenv and update pip"
   pip:
