CHANGE - Added django compressor support

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -28,3 +28,7 @@
 - name: "Collect static files"
   command: "{{ python_binary }} {{ release_path.stdout }}/src/manage.py collectstatic --noinput --clear"
   run_once: true
+
+- name: "Compress static files"
+  command: "{{ python_binary }} {{ release_path.stdout }}/src/manage.py compress --force"
+  run_once: true
